--- a/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
+++ b/languagetool-core/src/main/resources/org/languagetool/MessagesBundle.properties
@@ -233,6 +233,7 @@ result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 resultAreaText = Results will appear here
 resultTime = <br>Time: {0}ms<br>
 ru = Russian
+sa = Sanskrit
 sk = Slovak
 sl = Slovenian
 space_after_comma = Put a space after the comma, but not before the comma.
